Minor textual Actor Sheet updates (feedback Ork the Bork)

--- a/templates/parts/initiatives.html
+++ b/templates/parts/initiatives.html
@@ -2,7 +2,7 @@
 		<h2 class="section-title">{{ localize 'shadowrun6.section.initiative' }}</h2>
 		<table>
 			<tr>
-				<th style="padding: 0 5px 0 5px; text-align: left;">{{ localize 'shadowrun6.label.attribute' }}</th>
+				<th style="padding: 0 5px 0 5px; text-align: left;">{{ localize 'shadowrun6.label.trait' }}</th>
 				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.base' }}</th>
 				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.dice' }}</th>
 			</tr>
