--- a/templates/parts/section-bodyware.html
+++ b/templates/parts/section-bodyware.html
@@ -8,7 +8,7 @@
 <table>
 	    <thead>
 	      <tr>
-	        <th>{{ localize 'shadowrun6.label.column.name' }}</th>
+	        <th style="text-align: left;">{{ localize 'shadowrun6.label.column.name' }}</th>
 	        <th>{{ localize 'shadowrun6.section.bodyware.column.essence' }}</th>
 	        <th>{{ localize 'shadowrun6.section.bodyware.column.capacity' }}</th>
 	        <th>
