--- a/templates/parts/section-gear.html
+++ b/templates/parts/section-gear.html
@@ -6,8 +6,8 @@
 <table>
 	    <thead>
 	      <tr>
-	        <th></th>
-	        <th>{{ localize 'shadowrun6.label.column.name' }}</th>
+	        <th style="width: 24px;"></th>
+	        <th style="text-align: left; padding-left: 3px;">{{ localize 'shadowrun6.label.column.name' }}</th>
 	        <th>{{ localize 'shadowrun6.label.column.rating' }}</th>
 	        <th>{{ localize 'shadowrun6.label.column.count' }}</th>
 	        <th>{{ localize 'shadowrun6.label.column.action' }}</th>
