--- a/templates/parts/section-matrixbase.html
+++ b/templates/parts/section-matrixbase.html
@@ -67,7 +67,7 @@
 	</table>
 		<table>
 			<tr>
-				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.attribute' }}</th>
+				<th style="padding: 0 5px 0 5px; text-align: left;">{{ localize 'shadowrun6.label.trait_pool' }}</th>
 				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.base' }}</th>
 				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.modifier' }}</th>
 				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.value' }}</th>
