--- a/templates/parts/section-soakresist.html
+++ b/templates/parts/section-soakresist.html
@@ -25,7 +25,7 @@
 				<th style="padding: 0 8px 0 2px; text-align: left; width: 135px;">{{ localize 'shadowrun6.label.defense_against' }}</th>
 				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.base' }}</th>
 				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.modifier' }}</th>
-				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.value' }}</th>
+				<th style="padding: 0 5px 0 5px;">{{ localize 'shadowrun6.label.pool' }}</th>
 				<th style="padding: 0 5px 0 5px;"></th>
 			</tr>
 			<!-- Defense Test/Pool -->
