--- a/templates/parts/vehicle-weapons.html
+++ b/templates/parts/vehicle-weapons.html
@@ -9,8 +9,8 @@
 		{{#if (or (eq item.system.type "WEAPON_FIREARMS")
 	           (or (eq item.system.type "WEAPON_SPECIAL")
 			    (or (eq item.system.type "WEAPON_CLOSE_COMBAT") (eq item.system.type "WEAPON_RANGED") ))) }}
-       <tr class="draggable item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
-       	<td style="margin-right: 1rem"><button type="button" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
+       <tr class="item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
+       	<td style="margin-right: 1rem"><button type="button" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
          <td><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
          <td><label class="middle-column" >{{attackrating item.system.attackRating}}</label></td>
 		 <td style="width: 20%; text-align: right; vertical-align: middle">
