--- a/templates/parts/section-armor.html
+++ b/templates/parts/section-armor.html
@@ -18,8 +18,8 @@
  		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'gear'}}
 		{{#iff item.system.type '==' "ARMOR"}}
-       <tr class="draggable item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
-       	<td style="margin-right: 1rem"><button type="button" name="collapseArmor{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
+       <tr class="item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
+       	<td style="margin-right: 1rem"><button type="button" name="collapseArmor{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
        	<td><label class="switch">
        	<input name="armorUsedForPool{{id}}" type="checkbox" data-item-id="{{this.id}}" data-check="system.usedForPool" {{checked item.system.usedForPool}} type="checkbox" data-dtype="Boolean"/>
                         <span class="shadowrun6-slider round"></span>
