--- a/templates/parts/section-drones.html
+++ b/templates/parts/section-drones.html
@@ -19,8 +19,8 @@
  		{{#each actor.items as |item id|}}
 		{{#if (eq item.type 'gear')}}
 		{{#if (eq item.system.type "DRONES") }}
-       <tr class="draggable item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
-       	<td style="margin-right: 1rem"><button type="button" name="collapseDrone{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
+       <tr class="item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
+       	<td style="margin-right: 1rem"><button type="button" name="collapseDrone{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
          <td class="centered"><label class="small-column" >{{item.system.handlOn}}/{{item.system.handlOff}}</label></td>
          {{#if (eq item.system.accOn item.system.accOff)}}
          <td class="centered"><label class="small-column" >{{item.system.accOn}}</label></td>
