--- a/templates/parts/section-metamagics.html
+++ b/templates/parts/section-metamagics.html
@@ -8,8 +8,8 @@
 <table>
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'metamagic'}}
-		<tr class="draggable item list-item" data-item-id="{{item.id}}">
-			<td> <input name="metamagicName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}" disabled></td>
+		<tr class="item list-item" data-item-id="{{item.id}}">
+			<td> <input name="metamagicName{{id}}" class="draggable" data-uuid="{{item.uuid}}" type="text" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}" disabled></td>
 			<td> <input name="metamagicExplain{{id}}" type="text" value="{{item.system.explain}}" data-field="system.explain" class="secondary" placeholder="Details" disabled></td>
 			<td><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
 					class="fas fa-edit"></i></a> <a class="item-control item-delete"
