--- a/templates/parts/section-rituals.html
+++ b/templates/parts/section-rituals.html
@@ -16,9 +16,9 @@
 	    </thead>
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'ritual'}}
-		<tr class="draggable item list-item" data-item-id="{{item.id}}">
+		<tr class="item list-item" data-item-id="{{item.id}}">
        	<td style="width:1rem"><button type="button" name="collapseRitual{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button></td>
-       	<td><input name="ritualName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}" disabled></td>
+       	<td><input name="ritualName{{id}}" type="text" class="draggable" data-uuid="{{item.uuid}}" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}" disabled></td>
 			<td class="centered" style="width: 2em"> <input name="ritualThreshold{{id}}" class="centered" type="text" value="{{item.system.threshold}}" data-field="system.threshold" data-type="Number" disabled></td>
 			<td class="centered">
 				<a class="item-control ritual-roll" title="Roll" data-item-id="{{item.id}}" ><i class="fas fa-dice-six"></i></a>
