--- a/templates/parts/section-weapons.html
+++ b/templates/parts/section-weapons.html
@@ -7,12 +7,12 @@
         {{#each actor.items as |item id|}}
         {{#if (eq item.type 'gear')}}
         {{#if (or (eq item.system.type "WEAPON_FIREARMS") (eq item.system.type "WEAPON_RANGED"))}}
-        <tr class="draggable item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
+        <tr class="item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
             <td style="margin-right: 1rem; width: 5%">
                 <button type="button" name="collapseWeapon{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button>
             </td>
             <td style="width: 30%">
-                <label class="item-name" data-skill="{{id}}">{{item.name}}</label>
+                <label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label>
             </td>
             <td style="width: 10%"><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
             <td style="width: 15%"><label class="middle-column" >{{attackrating item.system.attackRating}}</label></td>
@@ -78,12 +78,12 @@
         {{#each actor.items as |item id|}}
         {{#iff item.type '==' 'gear'}}
         {{#iff item.system.type '==' "WEAPON_CLOSE_COMBAT"}}
-        <tr class="draggable item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
+        <tr class="item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
             <td style="margin-right: 1rem; width: 5%">
                 <button type="button" name="collapseCloseCombatWeapon{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button>
             </td>
             <td style="width: 30%">
-                <label class="item-name" data-skill="{{id}}">{{item.name}}</label>
+                <label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label>
             </td>
             <td style="width: 10%"><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
             <td style="width: 15%"><label class="middle-column" >{{attackrating item.calculated.attackRating}}</label></td>
@@ -142,12 +142,12 @@
         {{#each actor.items as |item id|}}
         {{#iff item.type '==' 'gear'}}
         {{#iff item.system.type '==' "WEAPON_SPECIAL"}}
-        <tr class="draggable item" data-item-id="{{this.id}}" title="{{sr6_description item.system 'item'}}">
+        <tr class="item" data-item-id="{{this.id}}" title="{{sr6_description item.system 'item'}}">
             <td style="margin-right: 1rem; width: 5%">
                 <button type="button" name="collapseSpecialWeapon{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button>
             </td>
             <td style="width: 30%">
-                <label class="item-name" data-skill="{{id}}">{{item.name}}</label>
+                <label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label>
             </td>
             <td style="width: 10%">
                 <label class="middle-column important-column">{{item.system.dmgDef}}</label>
