--- a/templates/parts/vehicle-brain.html
+++ b/templates/parts/vehicle-brain.html
@@ -7,8 +7,8 @@
  		{{#each actor.items as |item id|}}
 		{{#if (eq item.type 'software')}}
 		{{#if (eq item.system.type "SOFTWARE") }}
-       <tr class="draggable item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
-       	<td><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
+       <tr class="item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
+       	<td><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
          <td><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
        	<td><input name="vehicleRating{{id}}" type="number" data-field="item.system.rating" value="{{item.system.rating}}"  style="width: 2em" /></td>
 			<td class="item-controls">
