--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -3,7 +3,7 @@
     <section class="sheet-body">
         <h2><input name="name" type="text" value="{{item.name}}" data-field="name" /></h2>
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="92" width="92"
-            style="background-color: var(--highlight-color)" />
+            style="background-color: var(--color-light-2);" />
         <div class="section">
             <table>
                 <tr>
