--- a/templates/parts/section-weapons.html
+++ b/templates/parts/section-weapons.html
@@ -20,11 +20,12 @@
                 <label class="middle-column">
                     <input name="weaponAmmocount{{id}}" type="text" value="{{item.system.ammocount}}" data-field="system.ammocount" style="width: 1.5em; text-align: center"/> / {{item.system.ammocap}}
                 </label>
-                <a class="item-control item-roll" data-skill="" data-item-id="{{this.id}}" title=""><i class="fas fa-rotate-right"></i></a>
+                {{!-- TODO add ammo reload --}}
+                <a class="item-control weapon-ammo-reload" data-skill="" data-item-id="{{this.id}}" title=""><i class="fas fa-rotate-right"></i></a>
             </td>
             <td class="skill-pool" style="width: 15%; text-align: right;">
          	    <label class="item-pool" data-skill="{{item.system.skill}}" data-skillspec="{{item.system.skillSpec}}">{{item.system.pool}}</label>
-         	    <a class="item-control item-roll" data-item-id="{{this.id}}" data-defend-with="physical" title="{{localize (concat "skill." item.system.skill)}}"><i class="fas fa-dice-six"></i></a>
+         	    <a class="item-control weapon-roll" data-uuid="{{item.uuid}}" data-skill="{{item.system.skill}}" data-item-id="{{this.id}}" data-defend-with="physical" title="{{localize (concat "skill." item.system.skill)}}"><i class="fas fa-dice-six"></i></a>
             </td>
             <td class="item-controls" style="width: 5%">
                 <td class="centered" style="width: 100%">
@@ -90,7 +91,7 @@
             <td style="width: 20%"></td>
             <td class="skill-pool" style="width: 15%; text-align: right;">
                 <label class="item-pool" data-skill="{{item.system.skill}}">{{item.system.pool}}</label>
-                <a class="item-control item-roll" data-skill="{{item.system.skill}}" data-item-id="{{this.id}}" title="{{localize (concat "skill." item.system.skill)}}"><i class="fas fa-dice-six"></i></a>
+                <a class="item-control weapon-roll" data-uuid="{{item.uuid}}" data-skill="{{item.system.skill}}" data-item-id="{{this.id}}" title="{{localize (concat "skill." item.system.skill)}}"><i class="fas fa-dice-six"></i></a>
             </td>
             <td class="item-controls" style="width: 5%">
                 <td class="centered"><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
@@ -153,17 +154,17 @@
                 <label class="middle-column important-column">{{item.system.dmgDef}}</label>
             </td>
             <td style="width: 15%">
-                <label class="middle-column" >{{attackrating item.system.attackRating}}</label>
+                <label class="middle-column" >{{attackrating item.calculated.attackRating}}</label>
             </td>
             <td style="width: 20%; text-align: right; vertical-align: middle">
                 <label class="middle-column">
                     <input name="weaponAmmocount{{id}}" type="text" value="{{item.system.ammocount}}" data-field="system.ammocount" style="width: 1.5em; text-align: center"/> / {{item.system.ammocap}}
                 </label>
-                <a class="item-control item-roll" data-skill="" data-item-id="" title=""><i class="fa-solid fa-rotate-right"></i></a>
+                <a class="item-control weapon-ammo-reload" data-skill="" data-item-id="" title=""><i class="fa-solid fa-rotate-right"></i></a>
             </td>
             <td class="skill-pool" style="width: 15%; text-align: right;">
                 <label class="item-pool" data-skill="{{item.system.skill}}">{{item.system.pool}}</label>
-                <a class="item-control item-roll" data-skill="{{item.system.skill}}" data-item-id="{{this.id}}" title="{{localize (concat "skill." item.system.skill)}}"><i class="fas fa-dice-six"></i></a>
+                <a class="item-control weapon-roll" data-uuid="{{item.uuid}}" data-skill="{{item.system.skill}}" data-item-id="{{this.id}}" title="{{localize (concat "skill." item.system.skill)}}"><i class="fas fa-dice-six"></i></a>
             </td>
             <td class="item-controls" style="width: 5%">
                 <td class="centered"><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
