--- a/templates/parts/section-matrixactions.html
+++ b/templates/parts/section-matrixactions.html
@@ -19,9 +19,10 @@
 	<div style="column-count: 2; background: radial-gradient(circle at center, #B6B6A4 100%, transparent 100%) no-repeat center; background-size: 2px 100%; margin-right: 5px;">
 
  		{{#each matrixActionAvailable as |action actionId|}}
+		<div style="break-inside: avoid;">
        	<div class="item" data-matrix-action-id="{{actionId}}" style="display: flex; font-size:small; align-items:center;">
        		<label style="width: 15px; margin-right: 2px;">{{matrixAction action}}</label>
-			<label style="flex-grow:10" class="collapsible">{{localize (concat3 'shadowrun6.matrixaction.' actionId '.name')}}</label>
+			<label style="flex-grow:10" class="collapsible">{{action.name}}</label>
          	{{#if (ne (matrixPool actionId ../actor) 0)}}
          	<div class="skill-pool">
          		<label class="item-pool">{{matrixPool actionId ../actor}}</label>
@@ -40,6 +41,7 @@
        	</div>
        	<div class="collapsible-content closed" style="font-size: var(--font-size-11); text-align:left; color: rgb(0 66 17); margin-bottom: 4px;">
 			{{localize (concat3 'shadowrun6.matrixaction.' actionId '.hint')}}
+		</div>
 		</div>
        {{/each}}
 
