--- a/templates/parts/section-complexforms.html
+++ b/templates/parts/section-complexforms.html
@@ -22,7 +22,7 @@
 			<td class="centered"style="width: 3em"> <input name="complexFormFading{{id}}" type="text" value="{{item.system.fading}}" data-field="system.fading" data-type="Number" disabled></td>
 			<td class="centered">
 				{{#iff item.system.fading ">" 0}}
-				<a class="item-control complexform-roll"   data-item-id="{{item.id}}"  title="Roll"><i class="fas fa-dice-six"></i></a>
+				<a class="item-control complexform-roll" data-type="Roll" data-uuid="{{item.uuid}}" data-item-id="{{item.id}}" title="Roll"><i class="fas fa-dice-six"></i></a>
 				{{/iff}}
 				<a class="item-control item-edit"   title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
 				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
