--- a/templates/parts/section-rituals.html
+++ b/templates/parts/section-rituals.html
@@ -21,7 +21,7 @@
        	<td><input name="ritualName{{id}}" type="text" class="draggable" data-uuid="{{item.uuid}}" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}" disabled></td>
 			<td class="centered" style="width: 2em"> <input name="ritualThreshold{{id}}" class="centered" type="text" value="{{item.system.threshold}}" data-field="system.threshold" data-type="Number" disabled></td>
 			<td class="centered">
-				<a class="item-control ritual-roll" title="Roll" data-item-id="{{item.id}}" ><i class="fas fa-dice-six"></i></a>
+				<a class="item-control ritual-roll" data-type="Roll" data-uuid="{{item.uuid}}" data-item-id="{{item.id}}" title="Roll" ><i class="fas fa-dice-six"></i></a>
 				<!-- <a class="item-control skill-roll" title="Roll"  data-skill="sorcery" data-skillspec="ritual_spellcasting"  data-item-id="{{item.id}}" ><i class="fas fa-dice-six"></i></a> -->
 				<a class="item-control item-edit"   title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
 				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
