--- a/templates/parts/section-spells.html
+++ b/templates/parts/section-spells.html
@@ -38,7 +38,7 @@
 			</td>
 			<td class="centered"style="width: 3em"> <input name="spellDrain{{id}}" type="text" value="{{item.system.drain}}" data-field="system.drain" data-type="Number" disabled></td>
 			<td class="centered">
-				<a class="item-control spell-roll"   data-item-id="{{item.id}}"  title="Roll"><i class="fas fa-dice-six"></i></a>
+				<a class="item-control spell-roll" data-type="Roll" data-uuid="{{item.uuid}}" data-item-id="{{item.id}}" title="Roll"><i class="fas fa-dice-six"></i></a>
 				<a class="item-control item-edit"   title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
 				<a class="item-control item-delete" title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
 	   </tr>
