--- a/templates/item/shadowrun6-quality-sheet.html
+++ b/templates/item/shadowrun6-quality-sheet.html
@@ -6,10 +6,10 @@
         <div class="section">
         <dl>
             <dt>{{localize 'shadowrun6.qualityedit.explain'}}</dt>
-            <dd><input name="explain" type="text" value="{{item.system.explain}}" data-field="system.explain" /></dd>
+            <dd><input name="explain" type="text" value="{{item.system.explain}}" data-field="system.explain" style="border: 1px solid var(--color-border-dark);" placeholder="{{localize 'shadowrun6.label.details'}}" /></dd>
             <dt>{{localize 'shadowrun6.qualityedit.description'}}:</dt>
             <dd>
-                <textarea name="description" type="text" data-field="system.description" class="secondary" placeholder="Details" cols="20" rows="6">{{item.system.description}}</textarea>
+                <textarea name="description" type="text" data-field="system.description" class="secondary" cols="20" rows="6">{{item.system.description}}</textarea>
            </dd>
             <dt>{{localize 'shadowrun6.qualityedit.category'}}</dt>
             <dd>
