Bugfix error on contact sheet close (#54)

--- a/templates/item/shadowrun6-contact-sheet.html
+++ b/templates/item/shadowrun6-contact-sheet.html
@@ -12,10 +12,10 @@
                     <th>{{localize 'shadowrun6.contact.favors'}}</th>
                 </tr>
                 <tr>
-                    <td style="width:8em"> <input name="type" class="box" type="text" value="{{item.system.type}}" data-field="system.type"  /></td>
-                    <td class="box centered"> <input name="rating" class="box" type="number" value="{{item.system.rating}}" data-field="system.rating" style="width:2em" /></td>
-                    <td class="box centered"> <input name="loyality" class="box" type="number" value="{{item.system.loyalty}}" data-field="system.loyalty" style="width:2em" /></td>
-                    <td class="box centered"> <input name="favors" class="box" type="number" value="{{item.system.favors}}" data-field="system.favors" style="width:2em" /></td>
+                    <td style="width:8em"> <input name="system.type" class="box" type="text" value="{{item.system.type}}" data-field="system.type"  /></td>
+                    <td class="box centered"> <input name="system.rating" class="box" type="number" value="{{item.system.rating}}" data-field="system.rating" style="width:2em" /></td>
+                    <td class="box centered"> <input name="system.loyality" class="box" type="number" value="{{item.system.loyalty}}" data-field="system.loyalty" style="width:2em" /></td>
+                    <td class="box centered"> <input name="system.favors" class="box" type="number" value="{{item.system.favors}}" data-field="system.favors" style="width:2em" /></td>
                 </tr>
             </table>
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
