--- a/templates/dialog/partRollDialogWeapon.html
+++ b/templates/dialog/partRollDialogWeapon.html
@@ -25,14 +25,14 @@
 		</tr>
 		{{#if (or (eq data.skillId "firearms")(eq data.skillId "exotic_weapons"))}}
 		<tr>
-			{{#iff data.getModes ">" 0}}
+			{{#if (or (or (or data.getModes.SS data.getModes.SA) data.getModes.BF) data.getModes.FA)}}
 			<td>{{localize "shadowrun6.roll.firemode"}}</td>
 			<td>
 				<select name="fireMode" id="fireMode">
 					{{selectOptions data.getModes selected=data.fireMode localize=true}}
 				</select>
 			</td>
-			{{/iff}}
+			{{/if}}
 			<td class="onlyFA" style="text-align:right; display:none">{{localize "shadowrun6.roll.fa_area"}}</td>
 			<td class="onlyFA" style="display:none">
 				<select id="fullAutoArea" name="fullAutoArea">
