--- a/styles/shadowrun6.css
+++ b/styles/shadowrun6.css
@@ -472,19 +472,17 @@ a.item-control.disabled-roll:hover {
 }
 .matrix-access-switch {
   position: relative;
-  /* height: 50px; */
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   margin-bottom: 5px;
   background: rgb(0 66 17);
   border: 2px solid #1e1e1e;
   border-radius: 12px;
 }
 .matrix-access-switch label{
-  padding: 0.2rem;
+  padding: 0.2rem 0.5rem;
   z-index: 1;
   cursor: pointer;
-  width: 76px;
   text-align: center;
   color: white;
   text-transform: uppercase;
@@ -509,4 +507,18 @@ a.item-control.disabled-roll:hover {
 }
 #matrix-access-switch-radio3:checked ~ #active-label {
   left: 66%;
+}
+
+.matrix-persona-attributes input[disabled] {pointer-events:none}
+.matrix-persona-attributes .matrix-attribute {
+  cursor: pointer;
+}
+.matrix-persona-attributes .matrix-attribute input:disabled {
+  width: 2em;
+  background: white;
+}
+.matrix-persona-attributes .matrix-attribute input.clicked:disabled {
+  background: rgb(0 200 50);
+  color: white;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px #FFF, 0 1px 0 #FFF;
 }
